feat: Complete Property Rental Management System - Full Stack Implementation